--- a/app/src/main/res/layout/activity_front_app.xml
+++ b/app/src/main/res/layout/activity_front_app.xml
@@ -14,27 +14,32 @@
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_more" />
 
         <com.google.android.material.tabs.TabLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <com.google.android.material.tabs.TabItem
+                android:id="@+id/publicacion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tab_text_1" />
 
             <com.google.android.material.tabs.TabItem
+                android:id="@+id/fotos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/tab_text_2" />
 
             <com.google.android.material.tabs.TabItem
+                android:id="@+id/friend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Wednesday" />
+                android:text="@string/tab_text_3" />
         </com.google.android.material.tabs.TabLayout>
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
