--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -29,14 +29,14 @@
             app:srcCompat="@drawable/logoGlobal" />
 
         <TextView
-            android:id="@+id/nombreRegistro"
+            android:id="@+id/etNombre"
             android:layout_width="224dp"
             android:layout_height="38dp"
             android:layout_gravity="center"
             android:hint="@string/name" />
 
         <EditText
-            android:id="@+id/correoRegistro"
+            android:id="@+id/etCorreo"
             android:layout_width="224dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -44,8 +44,54 @@
             android:hint="@string/correoRegistro"
             android:inputType="textEmailAddress" />
 
+        <TextView
+            android:id="@+id/Genero"
+            android:layout_width="365dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/genero"
+            android:text="TextView" />
+
+        <RadioGroup
+            android:id="@+id/rdGenero"
+            android:layout_width="368dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+            <RadioButton
+                android:id="@+id/rdMasculino"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/masculino" />
+
+            <RadioButton
+                android:id="@+id/rdFemenino"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/femenino" />
+
+            <RadioButton
+                android:id="@+id/rdOtros"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/otros" />
+        </RadioGroup>
+
+        <TextView
+            android:id="@+id/Pais"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/pais"
+            android:text="@string/pais" />
+
+        <Spinner
+            android:id="@+id/spPais"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/paises" />
+
         <EditText
-            android:id="@+id/passwordRegistro"
+            android:id="@+id/etPassword"
             android:layout_width="229dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -54,7 +100,7 @@
             android:inputType="textPassword" />
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/etPassword2"
             android:layout_width="259dp"
             android:layout_height="wrap_content"
             android:ems="10"
