--- a/app/src/main/res/layout/fragment_publicacion.xml
+++ b/app/src/main/res/layout/fragment_publicacion.xml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/publick"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".publicacion">
+    android:background="#E3D2FA"
+    android:backgroundTint="#EAE3F8"
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="148dp"
+        android:contentDescription="@string/photo_description"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/_21718" />
+
+    <EditText
+        android:id="@+id/editText"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="48dp"
+        android:autofillHints="username"
+        android:background="#D8DCF2"
+        android:hint="@string/Contenido"
+        android:inputType="text"
+        android:textColor="#FFFFFF" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/uploadButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/postear" />
+</LinearLayout>
